Add `third_party/**` to the shadowbox workflow.

--- a/.github/workflows/build_and_test_shadowbox.yml
+++ b/.github/workflows/build_and_test_shadowbox.yml
@@ -28,6 +28,7 @@ jobs:
           filters: |
             src:
               - 'src/shadowbox/**'
+              - 'third_party/**'
 
       - name: Install Node
         if: steps.changes.outputs.src == 'true'
