--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run format"
+      "pre-commit": "./task.sh lint && ./task.sh format"
     }
   }
 }
