--- a/src/shadowbox/Taskfile.yml
+++ b/src/shadowbox/Taskfile.yml
@@ -1,7 +1,7 @@
 version: '3'
 
-vars:
-  BUILD_DIR: '{{joinPath .USER_WORKING_DIR "build" "shadowbox"}}'
+requires:
+  vars: [OUTPUT_BASE]
 
 tasks:
   build:
@@ -11,7 +11,7 @@ tasks:
       TARGET_ARCH: '{{.TARGET_ARCH | default "x86_64"}}'
       GOOS: '{{get (dict "macos" "darwin") .TARGET_OS | default .TARGET_OS}}'
       GOARCH: '{{get (dict "x86_64" "arm64") .TARGET_ARCH | default .TARGET_ARCH}}'
-      TARGET_DIR: '{{.TARGET_DIR | default (joinPath .BUILD_DIR .TARGET_OS .TARGET_ARCH)}}'
+      TARGET_DIR: '{{.TARGET_DIR | default (joinPath .OUTPUT_BASE .TARGET_OS .TARGET_ARCH)}}'
       NODE_DIR: '{{joinPath .TARGET_DIR "app"}}'
       BIN_DIR: '{{joinPath .TARGET_DIR "bin"}}'
     cmds:
@@ -57,7 +57,7 @@ tasks:
       - mkdir -p '{{.STATE_DIR}}'
       - echo '{"hostname":"127.0.0.1"}' > "{{.STATE_CONFIG}}"
       - source '{{joinPath .TASKFILE_DIR "scripts/make_test_certificate.sh"}}' '{{.RUN_DIR}}'
-      - node '{{joinPath .BUILD_DIR .TARGET_OS .TARGET_ARCH "app/main.js"}}'
+      - node '{{joinPath .OUTPUT_BASE .TARGET_OS .TARGET_ARCH "app/main.js"}}'
 
   docker:build:
     desc: Build the Outline Server Docker image
@@ -65,7 +65,7 @@ tasks:
       VERSION: '{{.IMAGE_VERSION | default "dev"}}'
       IMAGE_NAME: '{{.IMAGE_NAME | default "localhost/outline/shadowbox"}}'
       TARGET_ARCH: '{{.TARGET_ARCH | default "x86_64"}}'
-      IMAGE_ROOT: '{{joinPath .BUILD_DIR "docker" .TARGET_ARCH}}'
+      IMAGE_ROOT: '{{joinPath .OUTPUT_BASE "docker" .TARGET_ARCH}}'
       # Newer node images have no valid content trust data.
       # Pin the image node:16.18.0-alpine3.16 by hash.
       # See image at https://hub.docker.com/_/node/tags?page=1&name=18.18.0-alpine3.18
