--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,7 @@ run: when_changed
 vars:
   REPO_ROOT: "{{.ROOT_DIR}}"
   BUILD_ROOT: "{{.ROOT_DIR}}/build"
+  DOCKER: '{{.DOCKER | default "docker"}}'
 
 includes:
   metrics_server:
