--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,6 +22,10 @@ includes:
     taskfile: ./src/shadowbox/Taskfile.yml
     vars: {OUTPUT_BASE: '{{joinPath .BUILD_ROOT "shadowbox"}}'}
 
+  third_party:
+    taskfile: ./third_party/Taskfile.yml
+    vars: {OUTPUT_BASE: '{{joinPath .BUILD_ROOT "third_party"}}'}
+
 tasks:
   clean:
     desc: Clean output files
