Experimental tag not server

--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -129,8 +129,8 @@ paths:
           description: Access key limit deleted successfully.
   /experimental/server/metrics:
     get:
-      tags: 
-        - Server
+      tags:
+        - Experimental
       parameters:
         - in: query
           name: since
